phase 2 for a user view for their post  #145